<resources>
    <string name="yes">SIM</string>
    <string name="no">NÃO</string>
    <string name="title_activity_new_event_flow">Nova festa</string>
    <string name="title_activity_detail">Carregar detalhes</string>
    <string name="action_settings">Configuracoes</string>
    <string name="action_remove_image">Remover</string>
    <string name="action_view_products">Ver produtos</string>
    <string name="confirm_delete_image">Excluir imagem?</string>
    <string name="confirm_delete_image_msg">Deseja realmente excluir a imagem do álbum?</string>
    <string name="title_activity_validate_check_in">Validar Entrada</string>
    <string name="app_name">GuideBar</string>
    <string name="app_picker_name">Aplicações</string>
    <string name="bookmark_picker_name">Favoritos</string>
    <string name="button_add_calendar">Adicionar ao calendário</string>
    <string name="button_add_contact">Adicionar contacto</string>
    <string name="button_back">Voltar</string>
    <string name="button_book_search">Procurar livro</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_custom_product_search">Pesquisa Personalizada</string>
    <string name="button_dial">Marcar número</string>
    <string name="button_done">Feito</string>
    <string name="button_email">Enviar e-mail</string>
    <string name="button_get_directions">Obter direcções</string>
    <string name="button_google_shopper">Shopper</string>
    <string name="button_mms">Enviar MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Abrir navegador</string>
    <string name="button_product_search">Procurar produto</string>
    <string name="button_search_book_contents">Pesquisar conteúdos</string>
    <string name="button_share_app">Aplicação</string>
    <string name="button_share_bookmark">Favorito</string>
    <string name="button_share_by_email">Partilhar via e-mail</string>
    <string name="button_share_by_sms">Partilhar via SMS</string>
    <string name="button_share_clipboard">Área de transferência</string>
    <string name="button_share_contact">Contacto</string>
    <string name="button_show_map">Visualizar mapa</string>
    <string name="button_sms">Enviar SMS</string>
    <string name="button_web_search">Pesquisa na Web</string>
    <string name="button_wifi">Conectar à rede</string>
    <string name="contents_contact">Informação de contacto</string>
    <string name="contents_email">Endereço de e-mail</string>
    <string name="contents_location">Coordenadas geográficas</string>
    <string name="contents_phone">Número de telefone</string>
    <string name="contents_sms">Endereço SMS</string>
    <string name="contents_text">Texto simples</string>
    <string name="history_clear_one_history_text">Limpar</string>
    <string name="history_clear_text">Limpar histórico</string>
    <string name="history_email_title">Histórico do Barcode Scanner</string>
    <string name="history_empty">Vazio</string>
    <string name="history_empty_detail">Não código de barras foram registrados</string>
    <string name="history_send">Enviar histórico</string>
    <string name="history_title">Histórico</string>
    <string name="menu_encode_mecard">Usar MECARD</string>
    <string name="menu_encode_vcard">Usar vCard</string>
    <string name="menu_help">Ajuda</string>
    <string name="menu_history">Histórico</string>
    <string name="menu_settings">Definições</string>
    <string name="menu_share">Partilhar</string>
    <string name="msg_bulk_mode_scanned">Modo em massa: código de barras lido e guardado</string>
    <string name="msg_camera_framework_bug">Desculpe, a câmera do Android encontrou um problema. Poderá precisar de reiniciar o dispositivo.</string>
    <string name="msg_default_format">Formato</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Olá</string>
    <string name="msg_default_status">Alinhar código de barras com o exemplo para ser lido.</string>
    <string name="msg_default_time">Tempo</string>
    <string name="msg_default_type">Tipo</string>
    <string name="msg_encode_contents_failed">Não foi possível codificar o código de barradas apartir dos dados fornecidos.</string>
    <string name="msg_google_books">Google Livros</string>
    <string name="msg_google_product">Google Product Search</string>
    <string name="msg_google_shopper_missing">Google Shopper não está instalado.</string>
    <string name="msg_install_google_shopper">Google Shopper combina leituras de códigos de barras com preços online e locais, análises e mais sem abrir o navegador. Gostaria de experimentar?</string>
    <string name="msg_intent_failed">Desculpe, a aplicação solicitada não pode ser iniciada. O conteúdo do código de barras poderá ser inválido.</string>
    <string name="msg_redirect">Redirecionar</string>
    <string name="msg_sbc_book_not_searchable">Desculpe, este livro não é pesquisável.</string>
    <string name="msg_sbc_failed">Desculpe, foi encontrado um erro na pesquisa.</string>
    <string name="msg_sbc_no_page_returned">Nenhuma página obtida</string>
    <string name="msg_sbc_page">Página</string>
    <string name="msg_sbc_results">Resultados</string>
    <string name="msg_sbc_searching_book">A procurar livro\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Trecho não disponível</string>
    <string name="msg_sbc_unknown_page">Página desconhecida</string>
    <string name="msg_share_explanation">Pode partilhar dados exibindo um código de barras no seu ecrã e lendo-o com outro telemóvel</string>
    <string name="msg_share_subject_line">Aqui estão os conteúdos do código de barras lido</string>
    <string name="msg_share_text">Ou introduza algum texto e pressione Enter</string>
    <string name="msg_sure">Tem a certeza?</string>
    <string name="msg_unmount_usb">Desculpe, o cartão SD não está disponível.</string>
    <string name="preferences_actions_title">Quando o código de barras é encontrado\u2026</string>
    <string name="preferences_auto_focus_title">Usar foco automático</string>
    <string name="preferences_bulk_mode_summary">Ler e guardar códigos de barras continuamente</string>
    <string name="preferences_bulk_mode_title">Modo em massa</string>
    <string name="preferences_copy_to_clipboard_title">Copiar para a área de transferência</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substituições: %s = conteúdos, %f = formato, %t = tipo</string>
    <string name="preferences_custom_product_search_title">Pesquisa personalizada de URL</string>
    <string name="preferences_decode_1D_title">Código de barras 1D</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Soluções alternativas de dispositivos com erros</string>
    <string name="preferences_disable_continuous_focus_summary">Use apenas o modo de focagem padrão</string>
    <string name="preferences_disable_continuous_focus_title">No foco contínuo</string>
    <string name="preferences_disable_exposure_title">Nenhuma exposição</string>
    <string name="preferences_front_light_auto">Automático</string>
    <string name="preferences_front_light_off">Inativo</string>
    <string name="preferences_front_light_on">Ativo</string>
    <string name="preferences_front_light_summary">Melhora a leitura em luz fraca em alguns telefones, mas pode causar clarões. Não disponível em certos dispositivos.</string>
    <string name="preferences_front_light_title">Usar luz da frente</string>
    <string name="preferences_general_title">Definições Gerais</string>
    <string name="preferences_invert_scan_summary">Procurar por códigos de barras brancos em fundo preto. Não disponível em certos dispositivos.</string>
    <string name="preferences_invert_scan_title">Inverter leitura</string>
    <string name="preferences_name">Definições</string>
    <string name="preferences_play_beep_title">Apitar</string>
    <string name="preferences_remember_duplicates_summary">Guardar pesquisas múltiplas do mesmo código de barras no histórico</string>
    <string name="preferences_remember_duplicates_title">Lembrar duplicados</string>
    <string name="preferences_result_title">Definições do resultado</string>
    <string name="preferences_scanning_title">Quando procurar por códigos de barras, descodificar\u2026</string>
    <string name="preferences_search_country">País busca</string>
    <string name="preferences_supplemental_summary">Tentar recuperar mais informação sobre os conteúdos dos códigos de barras</string>
    <string name="preferences_supplemental_title">Recuperar mais informação</string>
    <string name="preferences_try_bsplus">Tente Barcode Scanner+</string>
    <string name="preferences_try_bsplus_summary">Aprimorado com novos recursos e interface</string>
    <string name="preferences_vibrate_title">Vibrar</string>
    <string name="result_address_book">Info de contacto encontrada</string>
    <string name="result_calendar">Evento de calendário encontrado</string>
    <string name="result_email_address">Endereço de e-mail encontrado</string>
    <string name="result_geo">Coordenadas geográficas encontradas</string>
    <string name="result_isbn">Livro encontrado</string>
    <string name="result_product">Produto encontrado</string>
    <string name="result_sms">Endereço SMS encontrado</string>
    <string name="result_tel">Número de telefone encontrado</string>
    <string name="result_text">Texto simples encontrado</string>
    <string name="result_uri">URL encontrado</string>
    <string name="result_wifi">Configuração WLAN encontrados</string>
    <string name="sbc_name">Pesquisa Google Book</string>
    <string name="wifi_changing_network">Solicitando ligação à rede\u2026</string>
    <string name="wifi_ssid_label">Nome da Rede</string>
    <string name="wifi_type_label">Tipo</string>
    <string name="action_create_new_party">Criar nova festa</string>
    <string name="action_add_image">Adicionar</string>
    <string name="action_add_ticket">Adicionar</string>
    <string name="action_buy">Comprar</string>
    <string name="action_buy_tiket">Comprar Ingresso</string>
    <string name="action_cancel_participation">Cancelar Participação</string>
    <string name="action_choose_image">Escolher imagem</string>
    <string name="action_comment">Comentar</string>
    <string name="action_concluir">Concluir</string>
    <string name="action_deactivate">Desativar</string>
    <string name="action_denunciate">Denunciar</string>
    <string name="action_drawer_close">Fechar menu lateral</string>
    <string name="action_edit_user">Editar Perfil</string>
    <string name="action_jump">Pular esta etapa</string>
    <string name="action_recover_pass">Recuperar senha</string>
    <string name="action_register">Cadastre-se</string>
    <string name="action_save">Salvar</string>
    <string name="action_send">Enviar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_open_bar">Open bar</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_birth_date">Data de Nascimento</string>
    <string name="prompt_description">Descrição</string>
    <string name="prompt_category">Categoria</string>
    <string name="prompt_min_age">Idade mínima</string>
    <string name="lblFrom">De</string>
    <string name="lblTo">Até</string>
    <string name="user_profile_view">Perfil de usuário</string>
    <string name="edit_event_view">Edição de festa</string>
    <string name="progress_saving_data">Salvando os dados</string>
    <string name="user_folder_description">Imagem de perfil do usuário</string>
    <string name="logo">Logo Guidebar</string>
</resources>