<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:background="@color/guidebar_background" >

    <LinearLayout
        android:id="@+id/login_form_linear"
        style="@style/LoginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <AutoCompleteTextView
            android:id="@+id/email"
            style="@style/loginEditText"
            android:layout_marginTop="50dp"
            android:completionThreshold="2"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            style="@style/loginEditText"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/generic_buton"
            android:onClick="logar"
            android:text="@string/action_sign_in_short"
            android:textColor="#000" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/generic_buton"
            android:onClick="registerUser"
            android:text="@string/action_register"
            android:textColor="#000" />

        <Button
            android:id="@+id/btnRecoverPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/generic_buton"
            android:onClick="recoverPass"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/action_recover_pass"
            android:textColor="#000" />
    </LinearLayout>

</ScrollView>