<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewUserActivity" >

    <!-- View User progress -->

    <LinearLayout
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/progress_saving_data"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- View User form -->

    <ScrollView
        android:id="@+id/view_user_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/guidebar_background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imgIcUserProfile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/user_profile_view"
                    android:scaleType="centerCrop"
                    android:src="@drawable/perfil_usuario" />

                <TextView
                    android:id="@+id/txtUserProfile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="10dp"
                    android:text="@string/user_profile_view"
                    android:textColor="#fff" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgUserProfile"
                android:layout_width="80dip"
                android:layout_height="80dip"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/user_folder_description"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/prompt_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/prompt_email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/prompt_birth_date"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btnEditUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="#fff"
                android:onClick="editUser"
                android:text="@string/action_edit_user" />
        </LinearLayout>
    </ScrollView>

</merge>